[project]
name = "parlaylab-nba"
version = "0.1.0"
description = "ParlayLab NBA: ML-driven parlay recommendation and marketing platform"
readme = "README.md"
authors = [{ name = "ParlayLab" }]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "httpx>=0.25",
    "pandas>=2.1",
    "numpy>=1.26",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "scikit-learn>=1.5",
    "torch>=2.2",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
    "plotly>=5.18",
    "schedule>=1.2",
    "tabulate>=0.9",
    "tenacity>=8.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "coverage>=7.3",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
